<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/Background">

        <TextView
            android:id="@+id/editProfileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="EDIT PROFILE"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="20dp"
            android:textAlignment="center"/>
        <!-- CardView for circular profile view -->
        <androidx.cardview.widget.CardView
            android:layout_width="155dp"
            android:layout_height="155dp"
            app:cardCornerRadius="250dp"
            app:cardBackgroundColor="@color/White"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="250dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/ProfileImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>
        <!--
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/profile_bg"
            android:layout_gravity="center"
            android:contentDescription="@string/profileimage"
            android:padding="20dp" />
            -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/ProfileImageEditButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/white"
                app:backgroundTint="#3D5AF1"
                android:text="Edit Picture" />

            <Button
                android:id="@+id/ProfileImageDeleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                app:backgroundTint="#3D5AF1"
                android:text="Delete Picture" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:weightSum="100">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:layout_marginBottom="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUserNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:hint="Name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                style="@style/TextInputStyle"
                android:layout_marginBottom="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edituserPhoneText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:hint="@string/phone"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                style="@style/TextInputStyle"
                android:layout_marginBottom="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edituserEmailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="@color/White"
                    android:inputType = "textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                style="@style/TextInputStyle"
                android:layout_marginBottom="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edituserHomepageText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:hint="URL" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/contCancelProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                app:backgroundTint="#3D5AF1"
                android:text="CANCEL" />

            <Button
                android:id="@+id/contAddProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:textColor="@android:color/white"
                app:backgroundTint="#3D5AF1"
                android:text="@string/confirm" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>