<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#111834"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="PROFILE"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:padding="20dp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/deafult_profile_photo"
        android:layout_gravity="center_horizontal"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#102341"
            android:padding="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/Gray" />

            <TextView
                android:id="@+id/user_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textAppearance="?attr/textAppearanceListItem"
                android:paddingStart="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#102341"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/Gray" />

            <TextView
                android:id="@+id/user_phone_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textAppearance="?attr/textAppearanceListItem"
                android:paddingStart="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#102341"
            android:padding="20dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/Gray" />

            <TextView
                android:id="@+id/user_email_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textAppearance="?attr/textAppearanceListItem"
                android:paddingStart="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:background="#102341"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="URL"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/Gray" />

            <TextView
                android:id="@+id/user_url_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textAppearance="?attr/textAppearanceListItem"
                android:paddingStart="16dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BACK"
            android:textColor="@android:color/white"
            app:backgroundTint="#3D5AF1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_edit_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="EDIT"
            android:textColor="@android:color/white"
            app:backgroundTint="#3D5AF1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:textSize="12sp"
            android:text="ADMIN"
            android:textColor="@color/White"
            app:cornerRadius="10dp"
            android:backgroundTint="#FF0000"/>
    </LinearLayout>

</LinearLayout>
